ref of metadata transformer as well as adding DOM elemnt to the parameters

--- a/test/test.html
+++ b/test/test.html
@@ -43,7 +43,7 @@
 <body>
   <div id="mocha"></div>
 
-	<div itemscope itemtype="http://schema.org/Offer" id="offer1" style="display:none">
+	<div itemscope itemtype="http://schema.org/Offer" id="offer1" data-event-id="123" style="display:none">
 		<span itemprop="name">Blend-O-Matic</span>
 		<span itemprop="price">$19.95</span>
 		<div itemprop="reviews" itemscope itemtype="http://schema.org/AggregateRating">
