adding tests for when handling dom element with multiple metadata roots

--- a/test/test.html
+++ b/test/test.html
@@ -51,6 +51,26 @@
 			<meta itemprop="bestRating" content="5" />Based on
 			<span itemprop="ratingCount">25</span>user ratings</div>
 	</div>
+  
+  <div id='multiple_meta_items'>
+    <div itemscope itemtype="http://schema.org/Offer" data-event-id="123" style="display:none">
+      <span itemprop="name">Blend-O-Matic1</span>
+      <span itemprop="price">$19.95</span>
+      <div itemprop="reviews" itemscope itemtype="http://schema.org/AggregateRating">
+        <meta itemprop="ratingValue" content="4" />
+        <meta itemprop="bestRating" content="5" />Based on
+        <span itemprop="ratingCount">25</span>user ratings</div>
+    </div>
+    <div itemscope itemtype="http://schema.org/Offer" data-event-id="456" style="display:none">
+      <span itemprop="name">Blend-O-Matic2</span>
+      <span itemprop="price">$19.95</span>
+      <div itemprop="reviews" itemscope itemtype="http://schema.org/AggregateRating">
+        <meta itemprop="ratingValue" content="4" />
+        <meta itemprop="bestRating" content="5" />Based on
+        <span itemprop="ratingCount">25</span>user ratings</div>
+    </div>
+    
+  </div>
 
   <script src="http://sinonjs.org/releases/sinon-1.15.4.js"></script>
   <script src="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.js"></script>
