--- a/test/test.html
+++ b/test/test.html
@@ -25,7 +25,7 @@
     <link rel="apple-touch-startup-image" sizes="1024x748" href="/startup-1024x748.png" media="screen and (min-device-width : 481px) and (max-device-width : 1024px) and (orientation : landscape)">
     <link rel="apple-touch-startup-image" sizes="768x1004" href="/startup-768x1004.png" media="screen and (min-device-width : 481px) and (max-device-width : 1024px) and (orientation : portrait)">
     <meta name="description" content="Velkommen til Den Norske Opera &amp;amp; Ballett.  Her finner du informasjon om våre forestillinger: opera, ballett, konserter og andre kulturtilbud.">
-    <meta name="keywords" content="Den Norske Opera &amp;amp; Ballett, operaen, ballett, nasjonalballetten, nasjonaloperaen, operahuset, konserter, operakoret, operaorkestret, Operaen, forestillinger, operabutikken, opera, Oslo, oslo opera, operaballetten, konserter">
+    <meta name="keywords" content="Den Norske Opera &amp; Ballett, operaen, ballett, nasjonalballetten, nasjonaloperaen, operahuset, konserter, operakoret, operaorkestret, Operaen, forestillinger, operabutikken, opera, Oslo, oslo opera, operaballetten, konserter">
     <meta property="og:description" content="Velkommen til Den Norske Opera &amp; Ballett. Her finner du informasjon om våre forestillinger, opera, ballett, konserter og andre kulturtilbud.">
     <meta property="og:url" content="http://operaen.no/">
     <meta property="og:title" content="Opera, Ballett og Konserter | Operaen  \ Den Norske Opera &amp; Ballett">
