--- a/acceptance_test/sitea/site/index.html
+++ b/acceptance_test/sitea/site/index.html
@@ -18,7 +18,7 @@
     <script>
         (function(i,s,o,g,r,a,m){i['ActivitystreamAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//cdn.activitystream.com/asa.js','asa');
 
-        asa('tenantId', 'AS-E2EAUTOTEST');
+        asa('tenantId', 'AS-E2EAUTOTEST-A');
         asa('connectedPartners', ['siteb.com']);
         asa('pageview');
     </script>
