Added new tests for keeping the sitea's UTM and passing it along, needs more work

--- a/acceptance_test/sitea/site/readmore/index.html
+++ b/acceptance_test/sitea/site/readmore/index.html
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+    <h1 id="site_a_read_more">Title</h1>
 	<p>
 		<a id="_link_no_param" href="http://siteb.com/buy">Ordinary link, no params</a>
 	</p>
@@ -43,9 +44,6 @@
 	</p>
 	<p>
 		<a id="_offer1" href="#" onclick="asa('itemview', 'offer1')">Scrape metadata</a>
-	</p>
-    <p>
-		<a id="_read_more" href="http://sitea.com/readmore">Scrape metadata</a>
 	</p>
 	<form id="_form_" action="http://siteb.com/buy" method="post">
 		<input name="__asa_partner_id" value="123" hidden="true">
