added an div with a unique id to wait for

--- a/acceptance_test/sitea/site/index.html
+++ b/acceptance_test/sitea/site/index.html
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+    <h1 id="site_a">Title</h1>
 	<p>
 		<a id="_link_no_param" href="http://siteb.com/buy">Ordinary link, no params</a>
 	</p>
