fix WebEvent references in e2e tests

--- a/e2e/sitea/site/index.html
+++ b/e2e/sitea/site/index.html
@@ -46,12 +46,12 @@
 		<a href="#" onclick="dataLayer.push({event : 'viewedsection', section_id : 'section123'})">Push in data layer (triggers ASA sectionview)</a>
 	</p>
 	<p>
-		<a id="_offer1" href="#" onclick="asa('itemview', 'offer1')">Scrape metadata</a>
+		<a id="_offer1" href="#" onclick="asa(WebEvent.as.web.product.viewed, 'offer1')">Scrape metadata</a>
 	</p>
 	<p>
 		<a id="_read_more" href="http://sitea.com/readmore">Scrape metadata</a>
 	</p>
-	<form id="_form_" action="http://siteb.com/buy" method="post">
+	<form id="_form_" action="http://siteb.com/buy" method="GET">
 		<input name="__asa_partner_id" value="123" hidden="true">
 		<input name="__asa_partner_sid" value="555" hidden="true">
 		<button type="submit">Buy</button>
