--- a/e2e/sitea/site/readmore/index.html
+++ b/e2e/sitea/site/readmore/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
+	<meta charset="UTF-8">
 	<title>Operaen.no</title>
 	<meta property="og:description" content="Velkommen til Den Norske Opera &amp; Ballett. Her finner du informasjon om våre forestillinger, opera, ballett, konserter og andre kulturtilbud.">
 	<meta property="og:url" content="http://operaen.no/">
@@ -12,21 +12,21 @@
 
 	<script>
 		var dataLayer = [
-			];
+		];
 	</script>
 
-    <script>
-        (function(i,s,o,g,r,a,m){i['ActivitystreamAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//cdn.activitystream.com/asa.js','asa');
+	<script>
+		(function (i, s, o, g, r, a, m) { i['ActivitystreamAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', '//cdn.activitystream.com/asa.js', 'asa');
 
-        asa('tenantId', 'AS-E2EAUTOTEST-A');
-        asa('connectedPartners', ['siteb.com']);
-        asa('pageview');
-    </script>
+		asa('tenantId', 'AS-E2EAUTOTEST-A');
+		asa('connectedPartners', ['siteb.com']);
+		asa(WebEvent.page.viewed);
+	</script>
 
 </head>
 
 <body>
-    <h1 id="site_a_read_more">Title</h1>
+	<h1 id="site_a_read_more">Title</h1>
 	<p>
 		<a id="_link_no_param" href="http://siteb.com/buy">Ordinary link, no params</a>
 	</p>
@@ -37,15 +37,16 @@
 		<a id="_twitter" href="http://twitter.com/pshomov">Twitter link, should not be tracked</a>
 	</p>
 	<p>
-		<div> <a href="#" onclick="dataLayer.push({event : 'verycustomeevent', params : 'sdfasd'})">Push in data layer (triggers Google analytics page view)</a>
+		<div>
+			<a href="#" onclick="dataLayer.push({event : 'verycustomeevent', params : 'sdfasd'})">Push in data layer (triggers Google analytics page view)</a>
 		</div>
 
 		<a href="#" onclick="dataLayer.push({event : 'viewedsection', section_id : 'section123'})">Push in data layer (triggers ASA sectionview)</a>
 	</p>
 	<p>
-		<a id="_offer1" href="#" onclick="asa('itemview', 'offer1')">Scrape metadata</a>
+		<a id="_offer1" href="#" onclick="asa(WebEvent.as.web.product.viewed, 'offer1')">Scrape metadata</a>
 	</p>
-	<form id="_form_" action="http://siteb.com/buy" method="post">
+	<form id="_form_" action="http://siteb.com/buy" method="GET">
 		<input name="__asa_partner_id" value="123" hidden="true">
 		<input name="__asa_partner_sid" value="555" hidden="true">
 		<button type="submit">Buy</button>
