update Inbox to use string event types, remove custom events, remove page.view event, add some types, adjust unit/e2e tests, add babel for transpilation

--- a/e2e/siteb/site/buy/index.html
+++ b/e2e/siteb/site/buy/index.html
@@ -8,7 +8,7 @@
 
 		window.onload = () => {
 			asa('tenant.id.provided', 'AS-E2EAUTOTEST-B');
-			asa(WebEvent.page.viewed);
+			asa('as.web.product.viewed');
 		}
 	</script>
 
@@ -25,7 +25,7 @@
 	<script>
 		setInterval(function () {
 			document.getElementById('partner_id').innerText = window.sessionStorage.getItem('__as.partner_id');
-			document.getElementById('partner_sid').innerText = window.sessionStorage.getItem('__as.partner_sid');
+			document.getElementById('partner_sid').innerText = window.sessionStorage.getItem('__as.partner_sid')
 		}, 500);
 	</script>
 </body>
