--- a/e2e/sitea/site/readmore/index.html
+++ b/e2e/sitea/site/readmore/index.html
@@ -16,11 +16,11 @@
 	</script>
 
 	<script>
-		(function (i, s, o, g, r, a, m) { i['ActivitystreamAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', '//cdn.activitystream.com/asa.js', 'asa');
+		(function (i, s, o, g, r, a, m) { i['ActivitystreamAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', '//cdn.activitystream.com/asa.min.js', 'asa');
 
-		asa('tenantId', 'AS-E2EAUTOTEST-A');
-		asa('connectedPartners', ['siteb.com']);
-		asa(WebEvent.page.viewed);
+		asa('tenant.id.provided', 'AS-E2EAUTOTEST-A');
+		asa('connected.partners.provided', ['siteb.com']);
+		asa('as.web.product.viewed');
 	</script>
 
 </head>
@@ -44,11 +44,11 @@
 		<a href="#" onclick="dataLayer.push({event : 'viewedsection', section_id : 'section123'})">Push in data layer (triggers ASA sectionview)</a>
 	</p>
 	<p>
-		<a id="_offer1" href="#" onclick="asa(WebEvent.as.web.product.viewed, 'offer1')">Scrape metadata</a>
+		<a id="_offer1" href="#" onclick="asa('as.web.product.viewed', 'offer1')">Scrape metadata</a>
 	</p>
 	<form id="_form_" action="http://siteb.com/buy" method="GET">
-		<input name="__asa_partner_id" value="123" hidden="true">
-		<input name="__asa_partner_sid" value="555" hidden="true">
+		<input name="__as.partner_id" value="123" hidden="true">
+		<input name="__as.partner_sid" value="555" hidden="true">
 		<button type="submit">Buy</button>
 	</form>
 	<div itemscope itemtype="http://schema.org/Offer" id="offer1">
