--- a/e2e/sitea/site/readmore/index.html
+++ b/e2e/sitea/site/readmore/index.html
@@ -16,7 +16,8 @@
 	</script>
 
 	<script>
-		(function (i, s, o, g, r, a, m) { i['ActivitystreamAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', '//cdn.activitystream.com/asa.min.js', 'asa');
+		var local = ~window.location.href.indexOf('127.0.0.1') || ~window.location.href.indexOf('localhost');
+		(function (i, s, o, g, r, a, m) { i['ActivitystreamAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', local ? 'http://localhost:6053/asa.min.js' : '//cdn.activitystream.com/asa.min.js', 'asa');
 
 		asa('tenant.id.provided', 'AS-E2EAUTOTEST-A');
 		asa('connected.partners.provided', ['siteb.com']);
