--- a/e2e/vnc/index.html
+++ b/e2e/vnc/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.min.css">
     <style>
         body {
@@ -12,6 +13,7 @@
             position: absolute;
             display: flex;
             flex-flow: row-reverse;
+            font-family: 'Roboto', sans-serif;
         }
 
         div#rfb {
@@ -22,16 +24,108 @@
             position: relative;
             height: 100%;
             flex: 1 0 auto;
-            overflow-y: auto;
-            white-space: pre;
-            padding: 10px;
-            word-break: break-all;
             box-sizing: border-box;
-            color: #e9e9e9;
+            display: flex;
+            flex-direction: column;
         }
 
-        div#panel * {
+        div#output {
+            color: #e9e9e9;
+            white-space: pre;
             word-break: break-all;
+            flex: 1 0;
+            overflow-y: auto;
+            padding: 10px;
+        }
+
+        div#output * {
+            word-break: break-all;
+        }
+
+        #controls {
+            display: flex;
+            padding: 10px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+            border-radius: 2px;
+        }
+
+        #controls> :not(:last-child) {
+            margin-right: 10px;
+        }
+
+        .btn {
+            flex: 1 1;
+            position: relative;
+            overflow: hidden;
+            border-width: 0;
+            outline: none;
+            border-radius: 2px;
+            box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+            background-color: #66bb6a;
+            color: #ecf0f1;
+            cursor: pointer;
+            transition: background-color .3s;
+        }
+
+        .btn:hover,
+        .btn:focus {
+            background-color: #338a3e;
+        }
+
+        .btn>* {
+            position: relative;
+        }
+
+        .btn span {
+            display: block;
+            padding: 12px 24px;
+        }
+
+        .btn:before {
+            content: "";
+
+            position: absolute;
+            top: 50%;
+            left: 50%;
+
+            display: block;
+            width: 0;
+            padding-top: 0;
+
+            border-radius: 100%;
+
+            background-color: rgba(236, 240, 241, .3);
+
+            -webkit-transform: translate(-50%, -50%);
+            -moz-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            -o-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+        }
+
+        .btn:active:before {
+            width: 120%;
+            padding-top: 120%;
+
+            transition: width .2s ease-out, padding-top .2s ease-out;
+        }
+
+        .btn.orange {
+            background-color: #e67e22;
+        }
+
+        .btn.orange:hover,
+        .btn.orange:focus {
+            background-color: #d35400;
+        }
+
+        .btn.red {
+            background-color: #ff6e6e;
+        }
+
+        .btn.red:hover,
+        .btn.red:focus {
+            background-color: #c73c43;
         }
     </style>
 </head>
