make PARTNER_ID_KEY, PARTNER_SID_KEY configurable, add a test for it

--- a/e2e/sitea/site/index.html
+++ b/e2e/sitea/site/index.html
@@ -20,6 +20,7 @@
 
 		window.onload = () => {
 			asa('set.tenant.id', 'AS-E2EAUTOTEST-A');
+			asa('set.partner.key', 'PARTNER_ID_KEY', 'foo');
 			asa('set.connected.partners', ['siteb.com']);
 			asa('as.web.product.viewed');
 		}
