--- a/e2e/siteb/site/buy/index.html
+++ b/e2e/siteb/site/buy/index.html
@@ -8,6 +8,7 @@
 
 		window.onload = () => {
 			asa('set.tenant.id', 'AS-E2EAUTOTEST-B');
+			asa('set.partner.key', 'PARTNER_ID_KEY', 'foo');
 			asa('as.web.product.viewed');
 		}
 	</script>
