--- a/e2e/sitea/site/readmore/index.html
+++ b/e2e/sitea/site/readmore/index.html
@@ -18,11 +18,23 @@
 	<script>
 		var local = ~window.location.href.indexOf('127.0.0.1') || ~window.location.href.indexOf('localhost');
 		(function (i, s, o, g, r, a, m) { i['ActivitystreamAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', local ? 'http://localhost:6053/asa.min.js' : '//cdn.activitystream.com/asa.min.js', 'asa');
-
-		asa('set.tenant.id', 'AS-E2EAUTOTEST-A');
-		asa('set.partner.key', 'PARTNER_ID_KEY', 'foo');
-		asa('set.connected.partners', ['siteb.com']);
-		asa('as.web.product.viewed');
+		window.onload = () => {
+			asa('tenant.id.provided', 'AS-E2EAUTOTEST-A');
+			asa('set.partner.key', 'PARTNER_ID_KEY', 'foo');
+			asa('set.connected.partners', ['siteb.com']);
+			asa('as.web.product.viewed', [
+				{
+					description: "SATURDAY NIGHT FEVER - THE MUSICAL",
+					id: "1-4034344",
+					product_variant: "Floor",
+					price_category: "A",
+					item_price: "222",
+					currency: "DKK",
+					categories: ["Teater", "Musical"]
+				}
+			]
+			);
+		}
 	</script>
 
 </head>
