--- a/e2e/sitea/site/readmore/index.html
+++ b/e2e/sitea/site/readmore/index.html
@@ -20,9 +20,8 @@
 		(function (i, s, o, g, r, a, m) { i['ActivitystreamAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', local ? 'http://localhost:6053/asa.min.js' : '//cdn.activitystream.com/asa.min.js', 'asa');
 
 		asa('set.tenant.id', 'AS-E2EAUTOTEST-A');
-		asa('set.partner.key', 'PARTNER_ID_KEY', 'foo');
 		asa('set.connected.partners', ['siteb.com']);
-		asa('as.web.product.viewed');
+		asa('as.web.product.viewed', ['Product/1']);
 	</script>
 
 </head>
@@ -46,7 +45,7 @@
 		<a href="#" onclick="dataLayer.push({event : 'viewedsection', section_id : 'section123'})">Push in data layer (triggers ASA sectionview)</a>
 	</p>
 	<p>
-		<a id="_offer1" href="#" onclick="asa('as.web.product.viewed', 'offer1')">Scrape metadata</a>
+		<a id="_offer1" href="#" onclick="asa('as.web.product.viewed', ['Offer/1'])">Scrape metadata</a>
 	</p>
 	<form id="_form_" action="http://siteb.com/buy" method="GET">
 		<button type="submit">Buy</button>
