--- a/e2e/siteb/site/buy/index.html
+++ b/e2e/siteb/site/buy/index.html
@@ -1,34 +1,52 @@
 <html>
+  <head>
+    <title>Billetportalen.no</title>
+    <script>
+      var local =
+        ~window.location.href.indexOf("127.0.0.1") ||
+        ~window.location.href.indexOf("localhost");
+      (function(i, s, o, g, r, a, m) {
+        i["ActivitystreamAnalyticsObject"] = r;
+        (i[r] =
+          i[r] ||
+          function() {
+            (i[r].q = i[r].q || []).push(arguments);
+          }),
+          (i[r].l = 1 * new Date());
+        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m);
+      })(
+        window,
+        document,
+        "script",
+        local
+          ? "http://localhost:6053/asa.min.js"
+          : "//cdn.activitystream.com/asa.min.js",
+        "asa"
+      );
 
-<head>
-	<title>Billetportalen.no</title>
-	<script>
-		var local = ~window.location.href.indexOf('127.0.0.1') || ~window.location.href.indexOf('localhost');
-		(function (i, s, o, g, r, a, m) { i['ActivitystreamAnalyticsObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', local ? 'http://localhost:6053/asa.min.js' : '//cdn.activitystream.com/asa.min.js', 'asa');
+      window.onload = () => {
+        asa("set.tenant.id", "AS-E2EAUTOTEST-B");
+        asa("as.web.product.viewed", ["Product/1"]);
+      };
+    </script>
+  </head>
 
-		window.onload = () => {
-			asa('set.tenant.id', 'AS-E2EAUTOTEST-B');
-			asa('set.partner.key', 'PARTNER_ID_KEY', 'foo');
-			asa('as.web.product.viewed');
-		}
-	</script>
-
-</head>
-
-<body>
-	<h1 id="site_b">Billetportalen.no</h1>
-	<h3>Partner id:
-		<span id="partner_id">...</span>
-	</h3>
-	<h3>Partner session id:
-		<span id="partner_sid">...</span>
-	</h3>
-	<script>
-		setInterval(function () {
-			document.getElementById('partner_id').innerText = window.sessionStorage.getItem('__as.partner_id');
-			document.getElementById('partner_sid').innerText = window.sessionStorage.getItem('__as.partner_sid')
-		}, 500);
-	</script>
-</body>
-
+  <body>
+    <h1 id="site_b">Billetportalen.no</h1>
+    <h3>Partner id: <span id="partner_id">...</span></h3>
+    <h3>Partner session id: <span id="partner_sid">...</span></h3>
+    <script>
+      setInterval(function() {
+        document.getElementById(
+          "partner_id"
+        ).innerText = window.sessionStorage.getItem("__as.partner_id");
+        document.getElementById(
+          "partner_sid"
+        ).innerText = window.sessionStorage.getItem("__as.partner_sid");
+      }, 500);
+    </script>
+  </body>
 </html>
